# cpp-starter-project

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
src/: hello.cpp
